external-crates/move/crates/move-compiler/tests/move_check/parser/constant_native.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E01003]: invalid modifier
  ┌─ tests/move_check/parser/constant_native.move:3:5
  │
3 │     native const Foo: u64 = 0;
  │     ^^^^^^ Invalid constant declaration. 'native' is used only on functions or structs
